[master] improve the logic
